--- a/index.html
+++ b/index.html
@@ -6,31 +6,114 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ViajesChile</title>
+    <!--CSS BOOBSTRAP-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <!--CDN FONTAWESOME-->
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <!--CSS LOCAL-->
     <link rel="stylesheet" href="./assets/css/style.css">
-    <!--CSS BOOBSTRAP-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-transparent container">
+        <a class="navbar-brand" href="#">
+            <img src="./assets/img/viajes.svg" width="35px">
+            Viajes Chile</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#presentacion">Quienes Somos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="destacados">Destacados</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contacto</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="./assets/img/carousel1.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="./assets/img/carousel2.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="./assets/img/carousel3.jpg" class="d-block w-100" alt="...">
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+    <section id="presentacion" class="d-none d-sm-block py-5 text-center text-white">
+        <div class="container">
+            <div>
+                <h2>¿Quiénes somos?</h2>
+                <hr class="my-4">
+            </div>
+            <div class="row py-5">
+                <div class="col-4">
+                    <div class="contenedor-icon">
+                        <i class="fal fa-plane fa-2x"></i>
+                    </div>
+                    <p class="text-left py-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem incidunt magnam dignissimos odit consequuntur dolore atque? Magni tenetur rerum odio architecto incidunt qui voluptatem provident dicta impedit a recusandae culpa ducimus, perferendis quam dolor eum voluptate eveniet. Nihil expedita, tenetur explicabo alias voluptas consequuntur deserunt fuga ducimus architecto eveniet rerum veniam placeat atque doloribus incidunt voluptate tempora. Delectus, magnam recusandae, consequatur eos aspernatur magni sint laborum cumque consequuntur alias laboriosam!</p>
+                </div>
+                <div class="col-4">
+                    <p class="text-left pb-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem incidunt magnam dignissimos odit consequuntur dolore atque? Magni tenetur rerum odio architecto incidunt qui voluptatem provident dicta impedit a recusandae culpa ducimus, perferendis quam dolor eum voluptate eveniet. Nihil expedita, tenetur explicabo alias voluptas consequuntur deserunt fuga ducimus architecto eveniet rerum veniam placeat atque doloribus incidunt voluptate tempora. Delectus, magnam recusandae, consequatur eos aspernatur magni sint laborum cumque consequuntur alias laboriosam!</p>
+                    <div class="contenedor-icon">
+                        <i class="fas fa-mountain fa-2x"></i>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="contenedor-icon">
+                        <i class="fas fa-route fa-2x"></i>
+                    </div>
+                    <p class="text-left py-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem incidunt magnam dignissimos odit consequuntur dolore atque? Magni tenetur rerum odio architecto incidunt qui voluptatem provident dicta impedit a recusandae culpa ducimus, perferendis quam dolor eum voluptate eveniet. Nihil expedita, tenetur explicabo alias voluptas consequuntur deserunt fuga ducimus architecto eveniet rerum veniam placeat atque doloribus incidunt voluptate tempora. Delectus, magnam recusandae, consequatur eos aspernatur magni sint laborum cumque consequuntur alias laboriosam!</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="destacados">
+
+    </section>
+
 
 
     <!--CDN JQUERY-->
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-    <!--CDN JQUERY BOOBSTRAP-->    
+    <!--CDN JQUERY BOOBSTRAP-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
-    <!--CDN POPPER BOOBSTRAP-->    
+    <!--CDN POPPER BOOBSTRAP-->
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
         integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
         crossorigin="anonymous"></script>
-    <!--CDN JAVASCRIPT BOOBSTRAP-->    
+    <!--CDN JAVASCRIPT BOOBSTRAP-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
         integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
         crossorigin="anonymous"></script>
-    <!--JAVASCRIPT LOCAL-->    
+    <!--JAVASCRIPT LOCAL-->
     <script src="./assets/js/scripts.js"></script>
 </body>
 
