se agrega seccion destacados y contacto

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -32,13 +32,13 @@
                     <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#presentacion">Quienes Somos</a>
+                    <a class="nav-link d-none d-sm-block" href="#presentacion">Quienes Somos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="destacados">Destacados</a>
+                    <a class="nav-link" href="#destacados">Destacados</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contacto</a>
+                    <a class="nav-link" href="#contacto">Contacto</a>
                 </li>
             </ul>
         </div>
@@ -75,10 +75,22 @@
                     <div class="contenedor-icon">
                         <i class="fal fa-plane fa-2x"></i>
                     </div>
-                    <p class="text-left py-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem incidunt magnam dignissimos odit consequuntur dolore atque? Magni tenetur rerum odio architecto incidunt qui voluptatem provident dicta impedit a recusandae culpa ducimus, perferendis quam dolor eum voluptate eveniet. Nihil expedita, tenetur explicabo alias voluptas consequuntur deserunt fuga ducimus architecto eveniet rerum veniam placeat atque doloribus incidunt voluptate tempora. Delectus, magnam recusandae, consequatur eos aspernatur magni sint laborum cumque consequuntur alias laboriosam!</p>
+                    <p class="text-left py-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem incidunt
+                        magnam dignissimos odit consequuntur dolore atque? Magni tenetur rerum odio architecto incidunt
+                        qui voluptatem provident dicta impedit a recusandae culpa ducimus, perferendis quam dolor eum
+                        voluptate eveniet. Nihil expedita, tenetur explicabo alias voluptas consequuntur deserunt fuga
+                        ducimus architecto eveniet rerum veniam placeat atque doloribus incidunt voluptate tempora.
+                        Delectus, magnam recusandae, consequatur eos aspernatur magni sint laborum cumque consequuntur
+                        alias laboriosam!</p>
                 </div>
                 <div class="col-4">
-                    <p class="text-left pb-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem incidunt magnam dignissimos odit consequuntur dolore atque? Magni tenetur rerum odio architecto incidunt qui voluptatem provident dicta impedit a recusandae culpa ducimus, perferendis quam dolor eum voluptate eveniet. Nihil expedita, tenetur explicabo alias voluptas consequuntur deserunt fuga ducimus architecto eveniet rerum veniam placeat atque doloribus incidunt voluptate tempora. Delectus, magnam recusandae, consequatur eos aspernatur magni sint laborum cumque consequuntur alias laboriosam!</p>
+                    <p class="text-left pb-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem incidunt
+                        magnam dignissimos odit consequuntur dolore atque? Magni tenetur rerum odio architecto incidunt
+                        qui voluptatem provident dicta impedit a recusandae culpa ducimus, perferendis quam dolor eum
+                        voluptate eveniet. Nihil expedita, tenetur explicabo alias voluptas consequuntur deserunt fuga
+                        ducimus architecto eveniet rerum veniam placeat atque doloribus incidunt voluptate tempora.
+                        Delectus, magnam recusandae, consequatur eos aspernatur magni sint laborum cumque consequuntur
+                        alias laboriosam!</p>
                     <div class="contenedor-icon">
                         <i class="fas fa-mountain fa-2x"></i>
                     </div>
@@ -87,12 +99,68 @@
                     <div class="contenedor-icon">
                         <i class="fas fa-route fa-2x"></i>
                     </div>
-                    <p class="text-left py-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem incidunt magnam dignissimos odit consequuntur dolore atque? Magni tenetur rerum odio architecto incidunt qui voluptatem provident dicta impedit a recusandae culpa ducimus, perferendis quam dolor eum voluptate eveniet. Nihil expedita, tenetur explicabo alias voluptas consequuntur deserunt fuga ducimus architecto eveniet rerum veniam placeat atque doloribus incidunt voluptate tempora. Delectus, magnam recusandae, consequatur eos aspernatur magni sint laborum cumque consequuntur alias laboriosam!</p>
+                    <p class="text-left py-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem incidunt
+                        magnam dignissimos odit consequuntur dolore atque? Magni tenetur rerum odio architecto incidunt
+                        qui voluptatem provident dicta impedit a recusandae culpa ducimus, perferendis quam dolor eum
+                        voluptate eveniet. Nihil expedita, tenetur explicabo alias voluptas consequuntur deserunt fuga
+                        ducimus architecto eveniet rerum veniam placeat atque doloribus incidunt voluptate tempora.
+                        Delectus, magnam recusandae, consequatur eos aspernatur magni sint laborum cumque consequuntur
+                        alias laboriosam!</p>
                 </div>
             </div>
         </div>
     </section>
-    <section id="destacados">
+    <section id="destacados" class="text-white py-5">
+        <div class="container">
+            <div class="text-center">
+                <h2>Destacados</h2>
+                <hr class="my-4">
+            </div>
+            <div class="card-deck">
+                <div class="card">
+                    <img src="./assets/img/card1.jpg" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Montañas</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                            of the card's content.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./assets/img/card2.jpg" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Lagos</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                            of the card's content.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./assets/img/card3.jpg" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Salares</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                            of the card's content.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./assets/img/card4.jpg" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Bosques nativos</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                            of the card's content.</p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+    <section id="contacto" class="py-5 text-white">
+        <div class="container">
+            <div class="text-center">
+                <h2>Contacto</h2>
+                <hr class="my-4">
+            </div>
+            <div data-tf-widget="zO38OYrp" style="width:100%;height:400px;color:#FFFFFF;"></div><script src="//embed.typeform.com/next/embed.js"></script>
+        </div>
 
     </section>
 
