--- a/index.html
+++ b/index.html
@@ -159,10 +159,25 @@
                 <h2>Contacto</h2>
                 <hr class="my-4">
             </div>
-            <div data-tf-widget="zO38OYrp" style="width:100%;height:400px;color:#FFFFFF;"></div><script src="//embed.typeform.com/next/embed.js"></script>
+            <div data-tf-widget="zO38OYrp" style="width:100%;height:400px;color:#FFFFFF;"></div>
+            <script src="//embed.typeform.com/next/embed.js"></script>
         </div>
-
     </section>
+    <footer id="Footer" class="text-white text-center">
+        <div class="container">
+            <div class="row py-2">
+                <div class="col-12 col-sm-6">
+                    <h4>VIAJES CHILE</h4>
+                </div>
+                <div class="col-12 col-sm-6">
+                    <i class="fab fa-github-square fa-2x mx-2"></i>
+                    <i class="fab fa-linkedin fa-2x mx-2"></i>
+                    <i class="fab fa-twitter fa-2x mx-2"></i>
+                    <i class="fab fa-facebook fa-2x mx-2"></i>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
 
@@ -184,5 +199,4 @@
     <!--JAVASCRIPT LOCAL-->
     <script src="./assets/js/scripts.js"></script>
 </body>
-
 </html>
