--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ViajesChile</title>
-    <!--CSS BOOBSTRAP-->
+    <!--GOOGLE FONTS ROBOTO-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap" rel="stylesheet">
+    <!--CSS BOOBSTRAP 4.6-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <!--CDN FONTAWESOME-->
@@ -72,7 +76,7 @@
             </div>
             <div class="row py-5">
                 <div class="col-4">
-                    <div class="contenedor-icon">
+                    <div data-toggle="tooltip" data-placement="top" title="Volemos juntos por Chile" class="contenedor-icon">
                         <i class="fal fa-plane fa-2x"></i>
                     </div>
                     <p class="text-left py-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem incidunt
@@ -91,12 +95,12 @@
                         ducimus architecto eveniet rerum veniam placeat atque doloribus incidunt voluptate tempora.
                         Delectus, magnam recusandae, consequatur eos aspernatur magni sint laborum cumque consequuntur
                         alias laboriosam!</p>
-                    <div class="contenedor-icon">
+                    <div data-toggle="tooltip" data-placement="bottom" title="Sube a la cima" class="contenedor-icon">
                         <i class="fas fa-mountain fa-2x"></i>
                     </div>
                 </div>
                 <div class="col-4">
-                    <div class="contenedor-icon">
+                    <div data-toggle="tooltip" data-placement="top" title="Usa la siguinte ruta" class="contenedor-icon">
                         <i class="fas fa-route fa-2x"></i>
                     </div>
                     <p class="text-left py-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem incidunt
@@ -118,7 +122,7 @@
             </div>
             <div class="card-deck">
                 <div class="card">
-                    <img src="./assets/img/card1.jpg" class="card-img-top">
+                    <img data-container="body" data-toggle="popover" title="Dato Curioso" data-placement="top" data-content="Descubierto en 1950." src="./assets/img/card1.jpg" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Montañas</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -126,7 +130,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="./assets/img/card2.jpg" class="card-img-top">
+                    <img data-container="body" data-toggle="popover" title="Dato Curioso" data-placement="top" data-content="Vista por primera vez por el británico Williams en 1820" src="./assets/img/card2.jpg" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Lagos</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -134,7 +138,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="./assets/img/card3.jpg" class="card-img-top">
+                    <img data-container="body" data-toggle="popover" title="Dato Curioso" data-placement="top" data-content="Fue furor en 2002 con mas de 1000 visitantes diarios."  src="./assets/img/card3.jpg" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Salares</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -142,7 +146,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="./assets/img/card4.jpg" class="card-img-top">
+                    <img data-container="body" data-toggle="popover" title="Dato Curioso" data-placement="top" data-content="Cientificos buscan especimenes nunca antes vistos."  src="./assets/img/card4.jpg" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Bosques nativos</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -170,33 +174,40 @@
                     <h4>VIAJES CHILE</h4>
                 </div>
                 <div class="col-12 col-sm-6">
-                    <i class="fab fa-github-square fa-2x mx-2"></i>
-                    <i class="fab fa-linkedin fa-2x mx-2"></i>
-                    <i class="fab fa-twitter fa-2x mx-2"></i>
-                    <i class="fab fa-facebook fa-2x mx-2"></i>
+                    <a href="https://github.com/matibravo/WebViajesChile" target="_blank" rel="noopener noreferrer">
+                        <i class="fab fa-github-square fa-2x mx-2"></i>
+                    </a>
+                    <a href="#" target="_blank" rel="noopener noreferrer">
+                        <i class="fab fa-linkedin fa-2x mx-2"></i>
+                    </a>
+                    <a href="#" target="_blank" rel="noopener noreferrer">
+                        <i class="fab fa-twitter fa-2x mx-2"></i>
+                    </a>
+                    <a href="#" target="_blank" rel="noopener noreferrer">
+                        <i class="fab fa-facebook fa-2x mx-2"></i>
+                    </a>
                 </div>
             </div>
         </div>
     </footer>
 
-
-
     <!--CDN JQUERY-->
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-    <!--CDN JQUERY BOOBSTRAP-->
+    <!--CDN JQUERY BOOBSTRAP 4.6-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
-    <!--CDN POPPER BOOBSTRAP-->
+    <!--CDN POPPER BOOBSTRAP 4.6-->
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
         integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
         crossorigin="anonymous"></script>
-    <!--CDN JAVASCRIPT BOOBSTRAP-->
+    <!--CDN JAVASCRIPT BOOBSTRAP 4.6-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
         integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
         crossorigin="anonymous"></script>
     <!--JAVASCRIPT LOCAL-->
     <script src="./assets/js/scripts.js"></script>
 </body>
+
 </html>
